fix: Inconsistant gap

--- a/styles/Leetcode.module.sass
+++ b/styles/Leetcode.module.sass
@@ -12,6 +12,7 @@
     font-size: 48px
     font-weight: 400
     margin-bottom: 20px
+    margin-top: 0
 .heading__desc
     color: #ababab
     font-family: Rubik, Roboto
@@ -23,12 +24,12 @@
 .problems
     display: grid
     justify-items: center
-    grid-template-columns: 380px 380px 380px
+    grid-template-columns: 358px 358px 358px
     grid-gap: 1rem
 
 @media screen and (max-width: 1200px)
     .problems
-        grid-template-columns: 380px 380px
+        grid-template-columns: 358px 358px
 
 @media screen and (max-width: 820px)
     .problems
